samples/express/views/errors/circular-include-a.njk
{% include "circular-include-b.njk" %}
